--- a/templates/csa.html
+++ b/templates/csa.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/a.css' %}">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <h1>django project</h1>
-    <img src="{% static 'images/cs.png' %}" alt="">
+    <img src="{% static }" alt="">
 </body>
 </html>
